# choc

firmware/: .gitignore  Cargo.toml  Makefile.toml  firmware.hex  firmware.uf2  flake.nix
firmware/.cargo/: config.toml
firmware/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
firmware/.direnv/flake-inputs/: i97xiipv0hbk9hw1743xqf12crkjlvsw-source  jakpzgfyyzypxpcaqs2nwjh4my27mpm6-source  vdcnwgc6qqljw3svn58mhl7s5ar9v5q4-source  yyvj1fpmx5z7llyar9qaafgsy1p51ibc-source
firmware/src/: battery.rs  bond.rs  cirque.rs  codes.rs  config.rs  descriptor.rs  keys.rs  lib.rs  matrix.rs  report.rs  storage.rs
firmware/src/split/: central.rs  dual.rs  link.rs  mod.rs  peripheral.rs
pcb/: choc_keyboard.kicad_prl  choc_keyboard.kicad_pro  choc_keyboard.kicad_sch  fp-info-cache  fp-lib-table
pcb/left/: choc_keyboard.kicad_pcb  choc_keyboard.kicad_prl  choc_keyboard.kicad_pro  choc_keyboard.kicad_sch  choc_keyboard.step  fp-info-cache  fp-lib-table  sym-lib-table  ~_autosave-choc_keyboard.kicad_pcb.lck  ~choc_keyboard.kicad_sch.lck
pcb/left/pictures.pretty/: panda.kicad_mod  sipping.kicad_mod
pcb/left/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
pcb/right/: _autosave-choc_keyboard.kicad_prl  choc_keyboard.kicad_pcb  choc_keyboard.kicad_prl  choc_keyboard.kicad_pro  choc_keyboard.kicad_sch  choc_keyboard.step  fp-info-cache
pcb/right/nice-nano-kicad/: controller.bak  controller.kicad_sym
pcb/right/nice-nano-kicad/controller.pretty/: nice_nano.kicad_mod
pcb/right/pictures.pretty/: panda.kicad_mod
pcb/right/production/: netlist.ipc  positions.csv
