[package]
edition = "2021"
name = "bruh78"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[dependencies]
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-nrf = { version = "0.1.0", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
    "nfc-pins-as-gpio",
] }

sequential-storage = "*"
embedded-storage-async = "*"


embassy-usb-logger = { version = "*" }

embassy-usb = { version = "*", features = ["defmt"] }
usbd-hid = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"

static_cell = { version = "2" }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
rand = { version = "0.8.4", default-features = false }
embedded-hal = { version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
heapless = "*"
nrf-softdevice = { version = "0.1.0", features = [
    "defmt",
    "ble-peripheral",
    "ble-central",
    "ble-gatt-server",
    "ble-gatt-client",
    "ble-l2cap",
    "ble-sec",
    "s140",
    "nrf52840",
    "critical-section-impl",
] }
nrf-softdevice-s140 = { version = "0.1.1", optional = true }
serde = { version = "1.0.207", default-features = false }
ssmarshal = { version = "1.0.0", default-features = false }
log = "0.4"
atomic-pool = "*"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
# embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", branch = "master" }

[profile.release]
debug = 2
